# mayreai

./: Cargo.toml  README.md
python/: README.md  main.py
src/: audio.m4a  burn.rs  error.rs  main.rs
src/controllers/: home_controller.rs
src/instructions/: inst.md
src/router/: mod.rs
