[package]
name = "mayreai"
version = "0.1.0"
edition = "2021"


[dependencies]

#-- Async
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
axum = "0.5"


#-- AI
async-openai = "0.18.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

cpal = "=0.13.0"
hound = "3.4.0"
